stabilize selenium tests